# Module10

./: pyproject.toml
quotemain/: manage.py
quotemain/quotemain/: asgi.py  settings.py  urls.py  wsgi.py
quotemain/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotemain/quotes/migrations/: 0001_initial.py
quotemain/quotes/templates/quotes/: add_quote.html  author_details.html
quotemain/users/: forms.py  views.py
quotemain/utils/: from_mongo_to_postgres.py
